# Sistem-Store

./: .gitattributes  .gitignore  CONFIG.py  PATTERNS.md  README.md  decorators.py  input.css  output.css  package-lock.json  package.json  production.json  pyproject.toml  requirements.txt  run.py  t.ipynb  t.js  t.py  tailwind.config.js  testEmptyInsert.json  teste.json  teste.py
System/: __init__.py  app.py  databases.code-search  production.py  tempCodeRunnerFile.py
System/databases/: consumes.json  production.json  tasks.json  users.json  waste.json
System/managers/: analyses.py  dbconnection.py  production.py  stock.py  stores_management.py  users.py
System/models/: __init__.py  dbconnection.py  production.py  stock.py  stores_management.py  test.py  test_test.py  users.py
System/static/: output.css  script.js
System/templates/: base.html  edit_user.html  edituser.html  homepage.html  login.html  nav.html  register.html  users.html
databases/: consumes.json  production.json  tasks.json  users.json  waste.json
extensions/: README.md  input.css  package-lock.json  tailwind.config.js
flaskr/: app.py  dbconnection.py  extensions.py  testEmptyInsert.json
flaskr/databases/: consumes.json  production.json  stock.json  tasks.json  users.json  waste.json
flaskr/models/: __init__.py  analyses.py  (+4 more)
instance/: database.db  teste.sqlite
static/: output.css
store/: app.py  extensions.py  first_run.py  utils.py
tailwind/: input.css  package-lock.json  package.json  tailwind.config.js
tests/: database_config.py  login_test.py  provider_test.py  utils.py
(+203 files in other folders)
